--- a/frontend/subscribe.html
+++ b/frontend/subscribe.html
@@ -58,9 +58,9 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-  <script>
-  (function(){
-    const API_BASE = 'http://localhost:4000';
+  <script src="app.js"></script>
+</body>
+</html>
     const connectBtn = document.getElementById('connectWallet');
     const walletInfo = document.getElementById('walletInfo');
     const artifactSelect = document.getElementById('artifactSelect');
